refactor(domain): redesign domain model with coordinate-based architecture
- introduce Coordinate and Direction
- replace Action targetX/targetY with Coordinate
- add MoveResult value object
- make Agent abstract
- introduce PatrolAgent and RefuelAgent
- refactor Team and Spot
- convert Cell and Road into immutable value objects
- move simulation logic into MatchState
- introduce MapValidator
- remove legacy simulation engines
- update application layer and mappers
- migrate test suite#